syntax = "proto3";
option go_package = "./proto";
package proto;

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse) {};
}

message LoginRequest {
  string id = 1;
  string username = 2;
  string password = 3;
}

message LoginResponse { string accessToken = 1; }


// TODO
//Execute this command to create .pb files
// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative proto/authService/auth.proto